Updated to process multiple messages (cardinality=many)

--- a/src/func/.env-sample
+++ b/src/func/.env-sample
@@ -1,8 +1,3 @@
-EVENT_HUB_FULLY_QUALIFIED_NAMESPACE=<NAME>.servicebus.windows.net
-EVENT_HUB_NAME=<HUB_NAME>
-POLICY_NAME=<SEND_POLICY_NAME>
-POLICY_KEY=<SEND_POLICY_KEY
-LISTEN_POLICY_FULL_STR=<FULL_SEND_POLICY_CONNECTION_STRING>
 MONGODB_CONNECTION_STRING=<COSMOS_MONGODB_CONNECTION_STRING>
 DB_NAME=<MONGO_DB_NAME>
-COLLECTION_NAME=<MONGO_COLLECTION_NAME>
+MONGODB_CONNECTION_STRING=<MONGO_COLLECTION_NAME>
