--- a/src/func/.env-sample
+++ b/src/func/.env-sample
@@ -1,3 +1,3 @@
 MONGODB_CONNECTION_STRING=<COSMOS_MONGODB_CONNECTION_STRING>
 DB_NAME=<MONGO_DB_NAME>
-MONGODB_CONNECTION_STRING=<MONGO_COLLECTION_NAME>
+COLLECTION_NAME=<MONGO_COLLECTION_NAME>
